--- a/InternetShopWebApp/InternetShopWebApp/appsettings.json
+++ b/InternetShopWebApp/InternetShopWebApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\MSSQLSERVER;Database=InternetShopDB;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Data Source=DESKTOP-T0L4JP9;Database=InternetShopWebBD;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
