--- a/f-internet-shop-web-app/package.json
+++ b/f-internet-shop-web-app/package.json
@@ -34,5 +34,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.36.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.32.2",
+    "react-router-dom": "^6.9.0"
   }
 }
