--- a/f-internet-shop-web-app/package.json
+++ b/f-internet-shop-web-app/package.json
@@ -40,5 +40,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.32.2",
     "react-router-dom": "^6.9.0"
-  }
+  },
+  "proxy": "https://localhost:7194"
 }
